# alpaca

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  benchmark_results.txt  clang_format.bash
.github/workflows/: build.yml  ci.yml
benchmark/: CMakeLists.txt  alpaca_benchmark.cpp  benchmark_log_10k_deserialize.cpp  benchmark_log_10k_serialize.cpp  benchmark_mesh_125k_deserialize.cpp  benchmark_mesh_125k_serialize.cpp  benchmark_minecraft_players_50_deserialize.cpp  benchmark_minecraft_players_50_serialize.cpp  log.h  mesh.h  minecraft_save.h
cmake/: project-is-top-level.cmake
demo/: main.cpp
include/alpaca/: alpaca.h
include/alpaca/detail/: aggregate_arity.h  byte_view.h  crc32.h  endian.h  field_type.h  from_bytes.h  is_bitset.h  is_specialization.h  main  options.h  output_container.h  print_bytes.h  struct_nth_field.h  to_bytes.h  type_info.h  type_traits.h  variable_length_encoding.h  variant_nth_field.h
include/alpaca/detail/types/: array.h  bitset.h  deque.h  duration.h  filesystem_path.h  glm_vector.h  list.h  map.h  optional.h  pair.h  set.h  string.h  tuple.h  unique_ptr.h  variant.h  vector.h
include/alpaca/types/: array.h  map.h  optional.h  pair.h  set.h  string.h  tuple.h  unique_ptr.h  variant.h  vector.h
include/serialize/: serialize.h  struct_nth_field.h
include/serialize/detail/: aggregate_arity.h  append.h  append_value_type.h  experimental_int_compression.cpp  from_bytes.h  get_repr_type.h  is_pair.h  is_string.h  is_tuple.h  is_vector.h  print_bytes.h  size_to_type.h  struct_nth_field.h  to_bytes.h  type.h  type_traits.h  unsigned_int_encoding.h  variable_length_encoding.h
include/structbyte/: structbyte.h
include/structbyte/detail/: aggregate_arity.h  endian.h  from_bytes.h  print_bytes.h  struct_nth_field.h  to_bytes.h  type_traits.h  variable_length_encoding.h
packaging/: pkgconfig.pc.in
python/: CMakeLists.txt  pyalpaca.cpp  python_deserialize_helper.h  python_serialize_helper.h
samples/: CMakeLists.txt  arrays_vectors_strings.cpp  chrono_duration.cpp  demo.cpp  fundamental_types.cpp  maps_and_sets.cpp  nested_structures.cpp  optional_values.cpp  pyalpaca_demo.py  time_t.cpp  unique_ptr.cpp  variant.cpp  write_file.cpp
src/: main.cpp
test/: CMakeLists.txt  Makefile  main.cpp  test_backwards_compatibility.cpp  test_deserialize_array.cpp  test_deserialize_big_endian.cpp  test_deserialize_bool.cpp  test_deserialize_bool_from_array.cpp  test_deserialize_chrono_duration.cpp  test_deserialize_chrono_duration_from_array.cpp  test_deserialize_deque.cpp  test_deserialize_deque_from_array.cpp  test_deserialize_enum_class.cpp  test_deserialize_enum_class_from_array.cpp  test_deserialize_error_crc32.cpp  test_deserialize_error_crc32_from_array.cpp  test_deserialize_error_set.cpp  test_deserialize_error_set_from_array.cpp  test_deserialize_error_vector.cpp  test_deserialize_error_vector_from_array.cpp  test_deserialize_error_version.cpp  test_deserialize_error_version_from_array.cpp  test_deserialize_float.cpp  test_deserialize_float_from_array.cpp  test_deserialize_from_carray.cpp  test_deserialize_from_ifstream.cpp  test_deserialize_int.cpp  test_deserialize_int_different_width.cpp  test_deserialize_int_from_array.cpp  test_deserialize_list.cpp  test_deserialize_list_from_array.cpp  test_deserialize_map.cpp  test_deserialize_map_from_array.cpp  test_deserialize_optional.cpp  test_deserialize_optional_from_array.cpp  test_deserialize_pair.cpp  test_deserialize_pair_from_array.cpp  test_deserialize_set.cpp  test_deserialize_set_from_array.cpp  test_deserialize_string.cpp  (+69 more)
